dashboard integrations